# functional-programming

./: .gitignore
python/: 00_iterators_raw.py  01_iterators_sugar.py  02_iterators_yield_from.py  10_generator_rawish.py  12_generator_yield_from.py  20_logging_basic.py  21_logging_with_sugar.py  22_logging_with_combinators.py  31_either_recover_with_either.py  32_either_with_sugar.py  32_logging_with_combinators.py  40_either_basic.py  40_io_basic_blocking.py  41_io_basic_async.py  50_io_basic_blocking.py  50_io_deps.py  60_io_deps.py  60_state.py  61_io_deps_provide_combinator.py  61_state_fixed.py  70_state.py  71_state_fixed.py  pyproject.toml  x0_either_basic.py  x1_either_with_sugar.py  xx_binary_tree_traversal.py  xx_either_basic.py  xx_either_with_sugar.py  z0_io_basic_blocking.py  z1_io_basic_async.py
scala/: build.sbt
scala/src/main/scala/functional/examples-part-6/: 01-basic-async-usage.sc
scala/src/main/scala/functional/examples-part-7/: 01-basic-effectful-program.sc  02-basic-effectful-program-factoring1.sc  03-basic-effectful-program-factoring2.sc  04-simple-io-type.sc  05-simple-io-type-as-monoid.sc  07-handling-input-effects.sc
scala/src/main/scala/functional/examples-part4/: 02-write-monad-example.sc
scala/src/main/scala/functional/examples-part5/: 08-json-parser-part2.sc  10-monad-basic.sc  11-monad-tail-rec.sc  12-monad-complete.sc
scala/src/main/scala/functional/part3/: monoid.scala
scala/src/main/scala/functional/part5/: jsonParser.scala  parserCombinatorMonadLooseEnds.scala  parserCombinatorMonadTailRec.scala
(+31 files in other folders)
