[project]
name = "python-generators-io"
version = "0.1.0"
description = "Examples of how to use generators as IO monad"
requires-python = ">=3.12.8"
dependencies = [
    "typing-extensions~=4.14.1"
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pyright~=1.1.403"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
enableExperimentalFeatures = true

[tool.ruff]
line-length = 120
target-version = "py312"
